css/sobre_mi.css
@import url('style.css');

:root {
  --oscuro: #0d0d0c;
  --blanco: #ffffff;
  --gris-claro: #eeeeee;
  --crema: #cbcbc2;
  --rojo: #c60f01;
  --azul: #3c61aa;
  --verde: #155942;
  --azul-claro: #8da6d7;
}
/*Inicio*/
.inicio {
  margin-top: 10vh;
  height: 90vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.autoretrato {
  display: block;
  height: 45%;
}
.title,
.red-bold {
  margin-top: 2rem;
  font-weight: 900;
  font-size: 2.3rem;
}
.red-bold {
  color: var(--rojo);
}
.subtitulo {
  margin-top: 5px;
  margin-bottom: 30px;
  font-size: 1.2rem;
  font-style: italic;
  color: var(--azul);
}

/**/
/*Sobre mi*/
.contenedor {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  overflow: hidden;
  background-color: var(--oscuro);
}

.contenido {
  padding: 30px;
  max-width: 1000px;
}
.sobre_mi {
  max-width: 650px;
  margin: 15px;
  padding: 30px;
  border-radius: 20px;
  display: inherit;
  flex-direction: column;
  color: var(--crema);
}
.highlight_p {
  font-size: 1.3rem;
  padding-top: 25px;
  padding-bottom: 50px;
  font-weight: 400;
}
.sobre_mi .title2 {
  font-weight: 900;
  font-size: 2.3rem;
  color: var(--blanco);
}
.sobre_mi .subtitulo2 {
  font-size: 1.2rem;
  font-style: italic;
  font-family: monospace;
  font-weight: 600;
  color: var(--blanco);
  margin-bottom: 20px;
}
.sobre_mi .parrafo {
  text-align: left;
  padding-left: 30px;
}
.p_bold {
  font-weight: 700;
}

.sobremi-links {
  margin-top: 40px;
  padding-left: 30px;
  display: flex;
  gap: 30px;
}
.sobre_mi_link_individual {
  display: inherit;
}
.linkArrow {
  width: 20px;
}
.redirection-link {
  font-family: monospace;
  color: var(--crema);
}
.title {
  text-align: center;
}
/**/
@media screen and (max-width: 600px) {
  .inicio {
    margin-top: 10vh;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .title,
  .red-bold {
    margin-top: 1rem;
    font-size: 1.5rem;
  }
  .subtitulo {
    font-size: 0.9rem;
  }
  .contenedor {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .sobre_mi {
    display: inherit;
    flex-direction: column;
  }
  .sobre_mi .title2 {
    font-weight: 900;
    font-size: 1.5rem;
  }
  .sobre_mi .subtitulo2 {
    font-size: 1rem;
    margin-bottom: 1rem;
  }
  .sobre_mi .parrafo {
    font-size: 0.85rem;
    text-align: left;
  }
  .p_bold {
    font-weight: 700;
  }
  .sobre_mi .parrafo {
    padding-left: 0px;
  }
  .sobremi-links {
    padding-left: 0px;
  }
  .highlight_p {
    font-size: 1rem;
  }
}
@media (min-width: 400px) {
  .title,
  .red-bold {
    margin-top: 1rem;
    font-size: 1.5rem;
  }
  .subtitulo {
    font-size: 1rem;
  }
}

@media (min-width: 700px) {
  .title,
  .red-bold {
    margin-top: 2rem;
    font-weight: 900;
    font-size: 2.3rem;
  }
  .red-bold {
    color: var(--rojo);
  }
  .subtitulo {
    margin-top: 5px;
    margin-bottom: 30px;
    font-size: 1.2rem;
    font-style: italic;
    color: var(--azul);
  }

  .sobre_mi .title2 {
    font-size: 2.3rem;
  }
}

